Add Mahasiswa and Kuliah API, and update swagger
